# TurboInfer

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: bench_grouped_gqa_attention.py  bench_http_completions.py  bench_paged_allocator.py  bench_paged_decode_attention.py  bench_paged_kv_buffer_attention.py  bench_qwen_like_attention.py  bench_qwen_like_decode_breakdown.py  bench_qwen_like_decode_engine.py  bench_qwen_like_decode_engine_matrix.py  bench_qwen_like_decode_step.py  bench_qwen_like_scheduler.py  bench_qwen_like_scheduler_matrix.py  bench_rmsnorm.py  bench_rope.py  bench_silu_mul.py  bench_single_layer_paged_attention.py  bench_vllm_offline.py  compare_batching.py  compare_engines.py  simulate_continuous_batching.py  simulate_paged_kv.py
docs/: architecture.md  benchmark-plan.md  colab-baseline.md  hardware-plan.md  kernel-integration-plan.md  kv-cache-benchmark.md  market-positioning.md  performance-metrics.md  project-plan.md  run-baseline.md  serving-api.md  vllm-comparison.md  weekly-log.md
reports/: baseline-naive-qwen2.5-0.5b-t4.md  dynamic-continuous-batching-sim.md  dynamic-paged-kv-cache-sim.md  gqa-paged-attention-profiles-autodl-3090.md  grouped-gqa-paged-attention-autodl-3090.md  kv-cache-compare-qwen2.5-0.5b-autodl-3090-2048.md  kv-cache-compare-qwen2.5-0.5b-t4-2048.md  kv-cache-compare-qwen2.5-0.5b-t4-512.md  kv-cache-qwen2.5-0.5b-t4.md  paged-kv-buffer-attention-autodl-3090.md  paged-kv-cache-sim.md  qwen-like-attention-wrapper-autodl-3090.md  qwen-like-batched-prefill-autodl-3090.md  qwen-like-scheduler-autodl-3090.md  (+14 more)
(+51 files in other folders)
