[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboinfer"
version = "0.1.0"
description = "A small, measurable LLM inference engine for AI infrastructure learning."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "accelerate",
  "sentencepiece",
  "protobuf",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
turboinfer = "turboinfer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
